2008-01-05  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: grent.c does not exist anymore. Remove the
	putgrent prototype.
	* lib/prototypes.h: "shadowio.h" was included for the definition
	of the spwd structure. Replace this include by <shadow.h>

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Remove duplicate logging to syslog.

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Avoid assignments in conditionals.
	* src/newgrp.c: Split check_perms(), syslog_sg() out of main().

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/shadow.c: Avoid assignments in conditionals.

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c (split_groups): Test the pointer returned by malloc.

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Document add_one_entry_nis(), write_all(),
	commonio_remove(), commonio_locate(), and commonio_rewind().

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Avoid implicit brackets.
	* src/pwck.c: Avoid implicit conversions to booleans.

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpck.c: Avoid implicit brackets.
	* src/grpck.c: Avoid implicit conversions to booleans.

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: No functional changes were introduced by the previous pwck
	and grpck changes, except for the following bug fix: no syslog
	logging if a passwd or group file was specified on the command
	line without a shadowed database file, even if the system shadowed
	database was changed).

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Fix typos in comments (gshadow/shadow).

2008-01-01  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Split process_flags(), open_files(), close_files()